--- a/nodejs/views/products.ejs
+++ b/nodejs/views/products.ejs
@@ -40,7 +40,6 @@
                     <table class="table table-bordered table-hover">
                         <thead class="table-dark">
                             <tr>
-                                <th>#</th>
                                 <th>Product Title</th>
                                 <th>Description</th>
                                 <th>Price</th>
@@ -50,13 +49,16 @@
                         <tbody>
                             <% products.forEach(function(product){ %>
                             <tr>
-                                <td>1</td>
                                 <td><%= product.title %></td>
                                 <td><%= product.description %></td>
                                 <td><%= product.price %></td>
-                                <td >
-                                    <button class="btn btn-danger btn-sm">Delete</button>
-                                    <button class="btn btn-success btn-sm">Edit</button>
+                                <td>
+                                    <a href="delete/<%= product._id %>">
+                                        <button class="btn btn-danger btn-sm">Delete</button>
+                                    </a>
+                                    <a href="edit/<%= product._id %>">
+                                        <button class="btn btn-success btn-sm">Edit</button>
+                                    </a>
                                 </td>
                             </tr>
                             <% }) %>
